@@ -269,10 +269,10 @@ public class HtmlEncoder implements AstProcessor {
   private void splitUpListeners(UserMethod initializeEventListeners) {
     ArrayList<Statement> listeners = initializeEventListeners.body.getValue().statements.getValue();
     for (Statement listener : listeners) {
-      if (listener instanceof ExpressionStatement) {
-        Expression exp = ((ExpressionStatement) listener).expression.getValue();
-        if (exp instanceof MethodInvocation) {
-          addListener((MethodInvocation) exp, !listener.isEnabled.getValue());
+      if (listener instanceof ExpressionStatement statement) {
+        Expression exp = statement.expression.getValue();
+        if (exp instanceof MethodInvocation invocation) {
+          addListener(invocation, !listener.isEnabled.getValue());
         }
       }
     }
@@ -290,12 +290,11 @@ public class HtmlEncoder implements AstProcessor {
         appendLambdaArguments(addListenerCall);
       });
       ArrayList<SimpleArgument> args = addListenerCall.requiredArguments.getValue();
-      if (!args.isEmpty() && "listener".equals(args.get(0).parameter.getValue().getName()) && args.get(0).expression.getValue() instanceof LambdaExpression) {
-        Lambda lambda = ((LambdaExpression) args.get(0).expression.getValue()).value.getValue();
-        if (lambda instanceof UserLambda) {
-          UserLambda userLambda = (UserLambda) lambda;
-          List<? extends AbstractMethod> listenerTypeMethods = args.get(0).parameter.getValue().getValueType().getDeclaredMethods();
-          AbstractMethod first = listenerTypeMethods.get(0);
+      if (!args.isEmpty() && "listener".equals(args.getFirst().parameter.getValue().getName()) && args.getFirst().expression.getValue() instanceof LambdaExpression) {
+        Lambda lambda = ((LambdaExpression) args.getFirst().expression.getValue()).value.getValue();
+        if (lambda instanceof UserLambda userLambda) {
+          List<? extends AbstractMethod> listenerTypeMethods = args.getFirst().parameter.getValue().getValueType().getDeclaredMethods();
+          AbstractMethod first = listenerTypeMethods.getFirst();
 
           pushDiv("alice-listener-declaration", () -> {
             appendLambdaMethodHeader(first.getName());
