@@ -42,24 +42,18 @@
  */
 package org.lgna.ik.poser.animation.composites;
 
-import java.util.ArrayList;
-
+import edu.cmu.cs.dennisc.java.util.Lists;
+import edu.cmu.cs.dennisc.pattern.Crawlable;
+import edu.cmu.cs.dennisc.pattern.Crawler;
 import org.lgna.ik.poser.PoseAstUtilities;
 import org.lgna.ik.poser.animation.KeyFrameData;
 import org.lgna.ik.poser.animation.KeyFrameStyles;
-import org.lgna.project.ast.CrawlPolicy;
-import org.lgna.project.ast.DoubleLiteral;
-import org.lgna.project.ast.Expression;
-import org.lgna.project.ast.JavaKeyedArgument;
-import org.lgna.project.ast.MethodInvocation;
-import org.lgna.project.ast.UserMethod;
+import org.lgna.project.ast.*;
 import org.lgna.project.virtualmachine.ReleaseVirtualMachine;
 import org.lgna.story.AnimationStyle;
 import org.lgna.story.Pose;
 
-import edu.cmu.cs.dennisc.java.util.Lists;
-import edu.cmu.cs.dennisc.pattern.Crawlable;
-import edu.cmu.cs.dennisc.pattern.Crawler;
+import java.util.ArrayList;
 
 /**
  * @author Matt May
@@ -83,16 +77,14 @@ public class AnimationParser implements Crawler {
       if (i < (dataList.size() - 1)) {
         second = styleList.get(i + 1);
       }
-      dataList.get(0).setStyle(KeyFrameStyles.getKeyFrameStyleFromTwoAnimationStyles(styleList.get(i), second));
+      dataList.getFirst().setStyle(KeyFrameStyles.getKeyFrameStyleFromTwoAnimationStyles(styleList.get(i), second));
     }
     return dataList;
   }
 
   @Override
   public void visit(Crawlable crawlable) {
-    if (crawlable instanceof MethodInvocation) {
-
-      MethodInvocation methodInv = (MethodInvocation) crawlable;
+    if (crawlable instanceof MethodInvocation methodInv) {
       if (PoseAstUtilities.isStrikePoseMethod(methodInv.method.getValue())) {
         Pose pose = null;
         double duration = 0;
@@ -101,18 +93,18 @@ public class AnimationParser implements Crawler {
         list.add(methodInv.requiredArguments.get(0).expression.getValue());
         for (JavaKeyedArgument kArg : methodInv.keyedArguments) {
           Expression value = ((MethodInvocation) kArg.expression.getValue()).requiredArguments.get(0).expression.getValue();
-          if (value instanceof DoubleLiteral) {
-            duration = ((DoubleLiteral) value).value.getValue();
+          if (value instanceof DoubleLiteral literal) {
+            duration = literal.value.getValue();
           } else {
             list.add(kArg.expression.getValue());
           }
         }
         Object[] argArr = vm.ENTRY_POINT_evaluate(null, list.toArray(new Expression[0]));
         for (Object o : argArr) {
-          if (o instanceof Pose) {
-            pose = (Pose) o;
-          } else if (o instanceof AnimationStyle) {
-            style = (AnimationStyle) o;
+          if (o instanceof Pose argPose) {
+            pose = argPose;
+          } else if (o instanceof AnimationStyle animationStyle) {
+            style = animationStyle;
           } else {
             System.out.println("asfd: " + o.getClass());
           }
