@@ -43,38 +43,6 @@
 
 package org.lgna.story.resourceutilities;
 
-import java.awt.Image;
-import java.awt.image.BufferedImage;
-import java.io.BufferedInputStream;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileWriter;
-import java.io.IOException;
-import java.io.StringWriter;
-import java.lang.reflect.Field;
-import java.lang.reflect.Method;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.Comparator;
-import java.util.Date;
-import java.util.HashMap;
-import java.util.LinkedList;
-import java.util.List;
-import java.util.Map;
-import java.util.Map.Entry;
-import java.util.jar.JarEntry;
-import java.util.jar.JarOutputStream;
-import java.util.regex.Matcher;
-import java.util.regex.Pattern;
-import java.util.zip.DataFormatException;
-import java.util.zip.ZipException;
-
-import javax.xml.transform.OutputKeys;
-import javax.xml.transform.Transformer;
-import javax.xml.transform.TransformerFactory;
-import javax.xml.transform.dom.DOMSource;
-import javax.xml.transform.stream.StreamResult;
-
 import edu.cmu.cs.dennisc.image.ImageUtilities;
 import edu.cmu.cs.dennisc.java.io.FileUtilities;
 import edu.cmu.cs.dennisc.java.io.TextFileUtilities;
@@ -102,18 +70,28 @@ import org.lgna.story.implementation.alice.AliceResourceClassUtilities;
 import org.lgna.story.implementation.alice.AliceResourceUtilities;
 import org.lgna.story.implementation.alice.JointImplementationAndVisualDataFactory;
 import org.lgna.story.implementation.alice.ModelResourceIoUtilities;
-import org.lgna.story.resources.BipedResource;
-import org.lgna.story.resources.FlyerResource;
-import org.lgna.story.resources.ImplementationAndVisualType;
-import org.lgna.story.resources.JointArrayId;
-import org.lgna.story.resources.JointId;
-import org.lgna.story.resources.JointedModelResource;
-import org.lgna.story.resources.QuadrupedResource;
-import org.lgna.story.resources.SlithererResource;
-import org.lgna.story.resources.SwimmerResource;
-
+import org.lgna.story.resources.*;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
+
+import javax.xml.transform.OutputKeys;
+import javax.xml.transform.Transformer;
+import javax.xml.transform.TransformerFactory;
+import javax.xml.transform.dom.DOMSource;
+import javax.xml.transform.stream.StreamResult;
+import java.awt.Image;
+import java.awt.image.BufferedImage;
+import java.io.*;
+import java.lang.reflect.Field;
+import java.lang.reflect.Method;
+import java.util.*;
+import java.util.Map.Entry;
+import java.util.jar.JarEntry;
+import java.util.jar.JarOutputStream;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.zip.DataFormatException;
+import java.util.zip.ZipException;
 
 public class ModelResourceExporter {
 
@@ -870,8 +848,8 @@ public class ModelResourceExporter {
         ModelClassData data = null;
         try {
           Object o = f.get(null);
-          if ((o != null) && (o instanceof ModelClassData)) {
-            data = (ModelClassData) o;
+          if ((o != null) && (o instanceof ModelClassData modelClassData)) {
+            data = modelClassData;
           }
         } catch (Exception e) {
         }
@@ -912,8 +890,8 @@ public class ModelResourceExporter {
         JointId fieldData = null;
         try {
           Object o = f.get(null);
-          if ((o != null) && (o instanceof JointId)) {
-            fieldData = (JointId) o;
+          if ((o != null) && (o instanceof JointId id)) {
+            fieldData = id;
           }
         } catch (Exception e) {
         }
@@ -1371,7 +1349,7 @@ public class ModelResourceExporter {
 
           //If the array is one in the "hide all the elements of this array" list, then declare it as an arrayId rather than an array of joint ids
           if (this.arraysToHideElementsOf.contains(fullArrayName) || this.arraysToHideElementsOf.contains(arrayEntry.getKey())) {
-            String firstEntry = arrayElements.get(0);
+            String firstEntry = arrayElements.getFirst();
             String parentString = "null";
             for (Tuple2<String, String> entry : trimmedSkeleton) {
               if (entry.getA().equals(firstEntry)) {
@@ -1685,7 +1663,7 @@ public class ModelResourceExporter {
     if (this.subResources.size() == 0) {
       System.err.println("NO SUB RESOURCES ON " + this.resourceName);
     }
-    ModelSubResourceExporter firstSubResource = this.subResources.get(0);
+    ModelSubResourceExporter firstSubResource = this.subResources.getFirst();
     String firstThumbName = AliceResourceUtilities.getThumbnailResourceFileName(firstSubResource.getModelName(), firstSubResource.getTextureName());
     String classThumbName = AliceResourceUtilities.getThumbnailResourceFileName(this.getClassName(), null);
     File firstThumbFile = new File(getThumbnailPath(root, firstThumbName));
